Align Content with Image-Fixed

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -306,6 +306,7 @@ img.menu__img {
   width: 280px;
   border-radius: .5rem;
   justify-self: center;
+  margin-top: -100px;
 }
 
 /*========== SERVICES ==========*/
